--- a/template.html
+++ b/template.html
@@ -7,11 +7,12 @@
        
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/3563cd56f3.js" crossorigin="anonymous"></script>
 
     </head>
     <body>
         <div id="app"></div>
-
+        
         <!-- Many of bootstrap components require the use of JavaScript to function -->
         <!-- Popper and BootStrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
